testsuite/tests/properties/invalid_new_node/not_memoized.lkt
import common

class LiteralList: ASTList[Literal] {
    fun prop(): EmptyNode = EmptyNode()
}
